--- a/wiki-viewer/style.css
+++ b/wiki-viewer/style.css
@@ -20,19 +20,49 @@ body{
 	font-family: sans-serif;
 }
 
+#background{
+	position: fixed;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	background-color: #dcdce8;
+	opacity: 0.15;
+}
+
 #wrapper{
+	position: relative;
 	max-width: 640px;
 	margin: 0 auto;
 	padding: 1em;
+}
+
+@media all and (min-width: 700px){
+	#background{
+		background: url(bkg.jpg) no-repeat top center ;
+		background-size: cover;
+	}
+	#wrapper{
+		min-height: 100vh;
+		background-color: rgba(255, 255, 255, 0.66);
+	}
 }
 
 h1{
 	text-align: center;
 }
 
+h1 span{
+	cursor: default;
+}
+
 h1 a{
 	text-decoration: none;
 	color: #000;
+}
+
+h1 a:focus{
+	outline: none;
 }
 
 #search-bar{
@@ -55,6 +85,24 @@ h1 a{
 	margin-bottom: 2em;
 }
 
+.search-result h2{
+	color: #36c;
+	margin-bottom: 1rem;
+}
+
+#results a{
+	text-decoration: none;
+	color: #000;
+}
+
+#results a:hover h2, #results a:focus h2, #results a:active h2{
+	text-decoration: underline;
+}
+
+#results a:hover, #results a:focus, #results a:active{
+	outline: none;
+}
+
 #load-more{
 	display: block;
 	width: 100%;
@@ -66,4 +114,32 @@ h1 a{
 
 button{
 	cursor: pointer;
+	background-color: #36c;
+	color: #fff;
+	border: none;
 }
+
+button:focus, button:hover, button:active{
+	outline: none;
+	background-color: #58e;
+}
+
+button, input{
+	padding: 0.5em;
+	border-radius: 0;
+	font-family: Arial;
+	font-size: 0.9rem;
+}
+
+input{
+	border-style: solid;
+	border-color: #babac6;
+	border-width: 1px;
+}
+
+input:focus{
+	border-color: #36c;
+	outline: none;
+}
+
+
