--- a/wa-resources/wa_resources.css
+++ b/wa-resources/wa_resources.css
@@ -14,6 +14,10 @@
 	margin: 0 auto;
 
 	min-height: 100vh;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	-moz-user-select: none;
+	user-select: none;
 }
 
 .ear-training-mixer{
@@ -22,7 +26,6 @@
 
 @media all and (min-width: 960px){
 	.app-container{
-		margin: 48px auto;
 		margin: 0 auto;
 	}
 	.ear-training-mixer{
@@ -38,7 +41,7 @@
 }
 @media all and (min-width: 960px) and (min-height: 684px){
 	.app-container{
-		margin: 48px auto;
+		margin: 48px auto 0 auto;
 	}
 }
 
@@ -314,6 +317,10 @@
 	transform: translateX(100%);
 	border-radius: 6px;
 	transition: transform 1s ease;
+	-webkit-user-select: auto;
+	-ms-user-select: auto;
+	-moz-user-select: auto;
+	user-select: auto;
 }
 
 
@@ -604,6 +611,10 @@
 
 
 /*          CONTROLLERS       */
+
+.inactive{
+	opacity: 0.3 !important;
+}
 
 .correct-answer{
 	box-shadow: 0 0 1em 0.5em #0F0
