small style changes

--- a/quote-machine/css/style.css
+++ b/quote-machine/css/style.css
@@ -156,6 +156,9 @@ p.error{
 	text-decoration: underline;
 	outline: none;
 }
+#quote.loading a {
+    opacity: 0.66;
+}
 
 footer{
 	position: absolute;
