--- a/wa-resources/wa_resources.css
+++ b/wa-resources/wa_resources.css
@@ -589,7 +589,7 @@
 .app-no-wa-overlay{
 	background-color: #eee;
 	position: absolute;
-	padding: 5rem;
+	padding: 1rem;
 	line-height: 1.6;
 	top: 0;
 	left: 0;
@@ -605,6 +605,12 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+
+@media all and (min-width: 665px){
+	.app-no-wa-overlay{
+		padding: 5rem;
+	}
 }
 
 
