--- a/calculator/style.css
+++ b/calculator/style.css
@@ -20,13 +20,28 @@ body{
 	font-family: 'Quicksand', sans-serif;
 	margin: 0;
 	background-color: hsla(899, 20%, 50%, 1);
+	min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #calculator{
 	height: 100vh;
+	min-height: 300px;
+	width: 100%;
 	background-color: #202020;
 	display: flex;
 	flex-wrap:wrap;
+    border: 3px solid #000;
+}
+
+@media all and (min-width: 415px) and (min-height: 737px){
+	#calculator{
+	    max-height: 568px;
+	    max-width: 320px;
+		box-shadow: -15px 15px 60px rgba(0, 0, 0, 0.75);
+	}
 }
 
 .row{
@@ -50,25 +65,59 @@ body{
 	width: 100%;
 	position: absolute;
 	bottom: 0;
-	font-size: 4rem;
+	font-size: 3rem;
 	color: #fff;
 	text-align: right;
 	margin: 0;
 }
 
 button{
+	user-select: none;
+	padding: 0;
 	border: none;
-	border-left: 1px solid;
+	border-left: 1px solid #000;
 	font-family: 'Quicksand', sans-serif;
 	font-size: 2em;
 	line-height: 0.5;
 	width: 25%;
 }
+button:active, button:focus{
+	outline: 0;
+}
 
 button.double-wide{
+	width: 50%;
+}
+.double-wide span{
+	display: block;
 	width: 50%;
 }
 
 button:first-child{
 	border-left: none;
+}
+
+button.focused{
+	background-color: #bebfc1;
+}
+
+button.modifier{
+	font-size: 1.5em;
+	background-color: #c7c9cb;
+}
+button.modifier.focused{
+	background-color: #b3b4b6;
+}
+
+button.operator{
+	font-size: 2.5em;
+	background-color: #f99012;
+	color: #fff;
+	transition: box-shadow 0.4s ease;
+}
+button.operator.focused{
+	background-color: #e07e0f;
+}
+button.operator.selected{
+	box-shadow: 0px 0px 0px 2px #000 inset;
 }
