--- a/calculator/style.css
+++ b/calculator/style.css
@@ -33,7 +33,7 @@ body{
 	background-color: #202020;
 	display: flex;
 	flex-wrap:wrap;
-    border: 3px solid #000;
+    /*border: 3px solid #000;*/
 }
 
 @media all and (min-width: 415px) and (min-height: 737px){
@@ -49,7 +49,7 @@ body{
 	width:100%;
 }
 .row:nth-child(n+3){
-	border-top: 1px solid;
+	/*border-top: 1px solid;*/
 }
 
 .display{
@@ -74,8 +74,9 @@ body{
 button{
 	user-select: none;
 	padding: 0;
+	margin: 0;
 	border: none;
-	border-left: 1px solid #000;
+	/*border-left: 1px solid #000;*/
 	font-family: 'Quicksand', sans-serif;
 	font-size: 2em;
 	line-height: 0.5;
